--- a/src/main/resources/templates/bill/billForm.html
+++ b/src/main/resources/templates/bill/billForm.html
@@ -4,71 +4,23 @@
       layout:decorate="~{layouts/layout1}">
 
 <head>
-    <style>
-        /* Apply custom CSS styles here */
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
-
-        form {
-            background-color: #fff;
-            padding: 20px;
-            border: 1px solid #ddd;
-            margin-top: 20px;
-            width: 300px;
-            margin: 0 auto;
-        }
-
-        form div {
-            margin-bottom: 10px;
-        }
-
-        form span {
-            display: block;
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
-
-        input[type="text"] {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ddd;
-        }
-
-        span.errors {
-            color: #d9534f;
-        }
-
-        .button {
-            background-color: #3498db;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            cursor: pointer;
-        }
-
-        .button:hover {
-            background-color: #2980b9;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/css/allCss.css"/>
 </head>
 
-<div layout:fragment="content">
+<div layout:fragment="content" class="billForm">
     <div>
         <form role="form" method="post" th:object="${billFormDto}">
-            <div>
-                <span>채무자</span>
-                <input type="text" th:field="*{name}" placeholder="채무자 이름을 입력해주세요">
-                <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"  class="errors"></span>
+            <div class="form-group">
+                <label for="name">채무자</label>
+                <input type="text" th:field="*{name}" id="name" placeholder="채무자 이름을 입력해주세요" class="custom-input">
+                <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="errors"></span>
             </div>
             <div>
-                <button type="submit" class="button">저장</button>
+                <button type="submit" class="custom-button">저장</button>
             </div>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
         </form>
     </div>
 </div>
+
 </html>
