--- a/src/main/resources/templates/freeBoard/freeBoardList.html
+++ b/src/main/resources/templates/freeBoard/freeBoardList.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       xmlns:layout=http://www.ultraq.net.nz/thymeleaf/layout
       layout:decorate="~{layouts/layout1}">
 
@@ -8,59 +7,7 @@
     <meta name="_csrf" th:content="${_csrf.token}"/>
     <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
 
-        <style>
-            /* Apply custom CSS styles here */
-            body {
-                font-family: Arial, sans-serif;
-                background-color: #f4f4f4;
-                margin: 0;
-                padding: 0;
-            }
-
-            button {
-                background-color: #3498db;
-                color: #fff;
-                border: none;
-                padding: 10px 20px;
-                cursor: pointer;
-            }
-
-            button:hover {
-                background-color: #2980b9;
-            }
-
-            table {
-                width: 100%;
-                border-collapse: collapse;
-                margin-top: 20px;
-            }
-
-            th, td {
-                padding: 10px;
-                text-align: left;
-                border-bottom: 1px solid #ddd;
-            }
-
-            th {
-                background-color: #3498db;
-                color: #fff;
-            }
-
-            td:nth-child(even) {
-                background-color: #f2f2f2;
-            }
-
-            td a {
-                text-decoration: none;
-                color: #3498db;
-                font-weight: bold;
-            }
-
-            td a:hover {
-                color: #2980b9;
-            }
-        </style>
-
+    <link rel="stylesheet" type="text/css" href="/css/allCss.css"/>
 </head>
 
 <th:block layout:fragment="script">
@@ -99,12 +46,10 @@
     </script>
 </th:block>
 
-<div layout:fragment="content">
-
-    <button onclick="newContent()">게시글 작성</button>
-
+<div layout:fragment="content" class="freeBoardList">
+    <button class="custom-button" onclick="newContent()">게시글 작성</button>
     <div>
-        <table>
+        <table class="content-table">
             <thead>
             <tr>
                 <th>작성자</th>
@@ -120,4 +65,6 @@
         </table>
     </div>
 </div>
+
+
 </html>
