--- a/src/main/resources/templates/upBoard/UBContent.html
+++ b/src/main/resources/templates/upBoard/UBContent.html
@@ -4,67 +4,41 @@
       layout:decorate="~{layouts/layout1}">
 
 <head>
-    <style>
-        /* Apply custom CSS styles here */
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-
-        th, td {
-            padding: 10px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-
-        th {
-            background-color: #3498db;
-            color: #fff;
-        }
-
-        td {
-            background-color: #fff;
-        }
-
-        td:nth-child(odd) {
-            background-color: #f2f2f2;
-        }
-
-        td a {
-            text-decoration: none;
-            color: #3498db;
-            font-weight: bold;
-        }
-
-        td a:hover {
-            color: #2980b9;
-        }
-
-        /* CSS for the div containing long content */
-        .long-content-div {
-            max-width: 100%; /* 최대 너비를 100%로 설정하여 부모 너비에 맞게 조절 */
-            border: 1px solid #ddd; /* 테두리 추가 (선택 사항) */
-            padding: 10px; /* 내용과 테두리 사이 여백 (선택 사항) */
-        }
-
-        /* CSS to make long content wrap within the div */
-        .long-content {
-            word-wrap: break-word;
-        }
-    </style>
+    <meta name="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+    <link rel="stylesheet" type="text/css" href="/css/allCss.css"/>
 </head>
 
-<div layout:fragment="content">
+<th:block layout:fragment="script">
+    <script th:inline="javascript">
+
+        function deleteContent(upBoardId){
+            var token = $("meta[name='_csrf']").attr("content");
+            var header = $("meta[name='_csrf_header']").attr("content");
+
+            var url = "/upBoard/" + upBoardId + "/delete";
+
+            $.ajax({
+                url      : url,
+                type     : "DELETE", // HTTP DELETE 메서드 사용
+                beforeSend : function(xhr){
+                    /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
+                    xhr.setRequestHeader(header, token);
+                },
+                cache   : false,
+                success  : function(result, status){
+                    location.href='/upBoard';
+                },
+                error : function(jqXHR, status, error){
+                }
+            });
+        }
+    </script>
+</th:block>
+
+<div layout:fragment="content" class="UBContent">
     <div>
-        <table>
+        <table class="UBContent-table">
             <thead>
             <tr>
                 <th>작성자</th>
@@ -81,6 +55,11 @@
         <!-- DB에서 받아온 내용을 <pre> 태그를 사용하여 그대로 표시 -->
         <pre th:text="${upBoard.getContent()}" class="long-content"></pre>
     </div>
+
+    <div th:if="${#authentication.name == upBoard.getMember().getEmail()}">
+        <button th:onclick="'deleteContent(' + ${upBoard.getId()} + ')'" >삭제</button>
+    </div>
+    <a th:href="@{/upBoard/{id}/edit(id=${upBoard.getId()})}">수정</a>
 </div>
 
 </html>
