--- a/src/main/resources/templates/upBoard/upBoardList.html
+++ b/src/main/resources/templates/upBoard/upBoardList.html
@@ -7,61 +7,8 @@
 <head>
     <meta name="_csrf" th:content="${_csrf.token}"/>
     <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+    <link rel="stylesheet" type="text/css" href="/css/allCss.css"/>
 
-    <style>
-        /* Custom CSS styles */
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
-
-        .button-container {
-            margin-top: 20px;
-            display: flex; /* 버튼을 가로로 정렬하기 위한 스타일 */
-        }
-
-        button {
-            background-color: #3498db;
-            color: #fff;
-            border: none;
-            padding: 10px 20px;
-            margin-right: 10px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #2980b9;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-
-        th, td {
-            padding: 10px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-
-        th {
-            background-color: #3498db;
-            color: #fff;
-        }
-
-        td a {
-            text-decoration: none;
-            color: #3498db;
-            font-weight: bold;
-        }
-
-        td a:hover {
-            color: #2980b9;
-        }
-    </style>
 </head>
 
 <th:block layout:fragment="script">
@@ -104,17 +51,17 @@
     </script>
 </th:block>
 
-<div layout:fragment="content">
-    <div class="button-container"> <!-- 버튼을 가로로 정렬하기 위한 div -->
-        <button onclick="newContent()">게시글 작성</button>
-        <form role="form" method="post">
-            <button sec:authorize="hasAnyAuthority('ROLE_NONE')" onclick="showPop()">등업 요청</button>
+<div layout:fragment="content" class="upBoardList">
+    <div class="button-container">
+        <button class="custom-button" onclick="newContent()">게시글 작성</button>
+        <form role="form" method="post" class="custom-form">
+            <button sec:authorize="hasAnyAuthority('ROLE_NONE')" onclick="showPop()" class="custom-button">등업 요청</button>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
         </form>
     </div>
 
     <div>
-        <table>
+        <table class="upBoardList-table">
             <thead>
             <tr>
                 <th>작성자</th>
@@ -130,4 +77,6 @@
         </table>
     </div>
 </div>
+
+
 </html>
