ㄹㅇ 찐찐찌찐 css 빼고 배포까지 확인 완료 코드!!!!!!

--- a/src/main/resources/templates/freeBoard/FBContent.html
+++ b/src/main/resources/templates/freeBoard/FBContent.html
@@ -108,7 +108,12 @@
     <div th:if="${#authentication.name == freeBoard.getMember().getEmail()}">
         <button th:onclick="'deleteContent(' + ${freeBoard.getId()} + ')'" >삭제</button>
     </div>
-    <a th:href="@{/freeBoard/{id}/edit(id=${freeBoard.getId()})}">수정</a>
+
+    <div th:if="${#authentication.name == freeBoard.getMember().getEmail()}">
+        <a th:href="@{/freeBoard/{id}/edit(id=${freeBoard.getId()})}">
+            <button>수정</button>
+        </a>
+    </div>
 
 </div>
 
