--- a/src/main/resources/templates/patch/editContent.html
+++ b/src/main/resources/templates/patch/editContent.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="/css/allCss.css"/>
 </head>
 
-<div layout:fragment="content" class="UBnewContent">
+<div layout:fragment="content" class="PnewContent">
     <div>
         <form role="form" method="post" th:object="${patch}">
             <!-- 제목 입력란 -->
