--- a/src/main/resources/templates/upBoard/editContent.html
+++ b/src/main/resources/templates/upBoard/editContent.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" type="text/css" href="/css/allCss.css"/>
 </head>
 
-<div layout:fragment="content" class="PnewContent">
+<div layout:fragment="content" class="UBnewContent">
     <div>
-        <form role="form" method="post" th:object="${patch}">
+        <form role="form" method="post" th:object="${upBoard}">
             <!-- 제목 입력란 -->
             <div>
                 <span>제목</span>
