진짜로 거짓말 아니고 오류 하나도 없음 댓글 삭제 버튼 하나 코드 잘못됐었는데 수정 완료

--- a/src/main/resources/templates/freeBoard/FBContent.html
+++ b/src/main/resources/templates/freeBoard/FBContent.html
@@ -91,7 +91,7 @@
             <tr th:each="Comments : ${freeComments}">
                 <td th:text="${Comments.getMember().getName()}" class="comment-author">작성자</td>
                 <td th:text="${Comments.getContent()}" class="comment-content">내용</td>
-                <td><div th:if="${#authentication.name == freeBoard.getMember().getEmail()}">
+                <td><div th:if="${#authentication.name == Comments.getMember().getEmail()}">
                     <button th:onclick="'deleteComment(' + ${Comments.getId()} + ',' + ${freeBoard.getId()} + ')'" class="comment-delete-button" >삭제</button>
                 </div></td>
             </tr>
