--- a/src/main/resources/templates/freeBoard/freeBoardList.html
+++ b/src/main/resources/templates/freeBoard/freeBoardList.html
@@ -46,8 +46,10 @@
     </script>
 </th:block>
 
-<div layout:fragment="content" class="freeBoardList">
-    <button class="custom-button" onclick="newContent()">게시글 작성</button>
+<div layout:fragment="content" class="AllList">
+    <div class="button-container">
+        <button class="custom-button" onclick="newContent()">게시글 작성</button>
+    </div>
     <div>
         <table class="content-table">
             <thead>
