--- a/src/main/resources/templates/money/moneyListForm.html
+++ b/src/main/resources/templates/money/moneyListForm.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" type="text/css" href="/css/allCss.css"/>
 </head>
 
-<div layout:fragment="content" class="moneyListForm">
+<div layout:fragment="content" class="AllList">
     <div>
-        <table>
+        <table class="content-table">
             <thead>
             <tr>
                 <th>채무자</th>
