--- a/src/main/resources/templates/registre/registreMain.html
+++ b/src/main/resources/templates/registre/registreMain.html
@@ -8,9 +8,9 @@
 
 </head>
 
-<div layout:fragment="content" class="registreMain">
+<div layout:fragment="content" class="AllList">
     <div>
-        <table>
+        <table class="content-table">
             <thead>
             <tr>
                 <th>채무자</th>
@@ -30,5 +30,4 @@
         </table>
     </div>
 </div>
-
 </html>
