--- a/src/main/resources/templates/upBoard/upgradeList.html
+++ b/src/main/resources/templates/upBoard/upgradeList.html
@@ -8,9 +8,9 @@
 
 </head>
 
-<div layout:fragment="content" class="upgradeList">
+<div layout:fragment="content" class="AllList">
     <div>
-        <table class="upgradeList-table">
+        <table class="content-table">
             <thead>
             <tr>
                 <th>사용자</th>
