--- a/src/main/resources/templates/freeBoard/FBContent.html
+++ b/src/main/resources/templates/freeBoard/FBContent.html
@@ -60,7 +60,7 @@
     </th:block>
 
 
-<div layout:fragment="content" class="FBContent">
+<div layout:fragment="content" class="AllContent">
     <div>
         <table class="content-table">
             <thead>
@@ -97,24 +97,23 @@
             </tr>
         </table>
     </div>
+        <form role="form" method="post"  th:object="${freeCommentDto}" sec:authorize="hasAnyAuthority('ROLE_USER')">
+            <textarea th:field="*{content}" placeholder="내용을 입력해주세요" class="text-area"></textarea>
+            <span th:if="${#fields.hasErrors('content')}" th:errors="*{content}" class="errors"></span>
+            <button type="submit">댓글 입력</button>
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+        </form>
+    <div class="flex-container">
+        <div th:if="${#authentication.name == freeBoard.getMember().getEmail()}">
+            <button th:onclick="'deleteContent(' + ${freeBoard.getId()} + ')'" class="delete-button">삭제</button>
+        </div>
 
-    <form role="form" method="post"  th:object="${freeCommentDto}" sec:authorize="hasAnyAuthority('ROLE_USER')">
-        <textarea th:field="*{content}" placeholder="내용을 입력해주세요" class="text-area"></textarea>
-        <span th:if="${#fields.hasErrors('content')}" th:errors="*{content}" class="errors"></span>
-        <button type="submit">댓글 입력</button>
-        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-    </form>
+        <div th:if="${#authentication.name == freeBoard.getMember().getEmail()}">
+            <a th:href="@{/freeBoard/{id}/edit(id=${freeBoard.getId()})}">
+                <button class="edit-button">수정</button>
+            </a>
+        </div>
 
-    <div th:if="${#authentication.name == freeBoard.getMember().getEmail()}">
-        <button th:onclick="'deleteContent(' + ${freeBoard.getId()} + ')'" >삭제</button>
     </div>
-
-    <div th:if="${#authentication.name == freeBoard.getMember().getEmail()}">
-        <a th:href="@{/freeBoard/{id}/edit(id=${freeBoard.getId()})}">
-            <button>수정</button>
-        </a>
-    </div>
-
 </div>
-
 </html>
