--- a/src/main/resources/templates/layouts/layout1.html
+++ b/src/main/resources/templates/layouts/layout1.html
@@ -17,13 +17,26 @@
     <th:block layout:fragment="script"></th:block>
     <th:block layout:fragment="css"></th:block>
 
+    <style>
+        .content-wrapper {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh; /* 최소 화면 높이를 유지합니다. */
+        }
+
+        .content {
+            flex-grow: 1; /* content가 나머지 공간을 모두 차지하도록 합니다. */
+        }
+    </style>
+
 </head>
 <body>
 <div th:replace="fragments/header::header"></div>
-
-<div layout:fragment="content" class="content">
-
+<div class="content-wrapper">
+    <div layout:fragment="content" class="content">
+        <!-- 내용을 추가하세요 -->
+    </div>
+    <div th:replace="fragments/footer::footer"></div>
 </div>
-<div th:replace="fragments/footer::footer"></div>
 </body>
 </html>
