--- a/src/main/resources/templates/patch/PBContent.html
+++ b/src/main/resources/templates/patch/PBContent.html
@@ -36,9 +36,9 @@
   </script>
 </th:block>
 
-<div layout:fragment="content" class="PBContent">
+<div layout:fragment="content" class="AllContent">
   <div>
-    <table>
+    <table class="comments-table">
       <thead>
       <tr>
         <th>작성자</th>
@@ -55,13 +55,15 @@
     <!-- DB에서 받아온 내용을 <pre> 태그를 사용하여 그대로 표시 -->
     <pre th:text="${patch.getContent()}" class="long-content"></pre>
   </div>
-  <div th:if="${#authentication.name == patch.getMember().getEmail()}">
-    <button th:onclick="'deleteContent(' + ${patch.getId()} + ')'" >삭제</button>
-  </div>
-  <div th:if="${#authentication.name == patch.getMember().getEmail()}">
-    <a th:href="@{/patch/{id}/edit(id=${patch.getId()})}">
-      <button>수정</button>
-    </a>
+  <div class="flex-container">
+    <div th:if="${#authentication.name == patch.getMember().getEmail()}">
+      <button th:onclick="'deleteContent(' + ${patch.getId()} + ')'" class="delete-button">삭제</button>
+    </div>
+    <div th:if="${#authentication.name == patch.getMember().getEmail()}">
+      <a th:href="@{/patch/{id}/edit(id=${patch.getId()})}">
+        <button class="edit-button">수정</button>
+      </a>
+    </div>
   </div>
 </div>
 
