--- a/src/main/resources/templates/patch/newContent.html
+++ b/src/main/resources/templates/patch/newContent.html
@@ -7,29 +7,28 @@
     <link rel="stylesheet" type="text/css" href="/css/allCss.css"/>
 </head>
 
-<div layout:fragment="content" class="PnewContent">
+<div layout:fragment="content" class="AllNewContent">
     <div>
-        <form role="form" method="post" th:object="${patchBoardFormDto}" class="PnewContent-form">
+        <form role="form" method="post" th:object="${patchBoardFormDto}" class="AllNewContent-form">
             <!-- 제목 입력란 -->
-            <div class="PnewContent-input">
-                <span>제목</span>
+            <div class="AllNewContent-input">
+                <span class="Input-Title">제목</span>
                 <input type="text" th:field="*{title}" placeholder="제목을 입력해주세요">
                 <span th:if="${#fields.hasErrors('title')}" th:errors="*{title}" class="errors"></span>
             </div>
 
             <!-- 내용 입력란 -->
-            <div class="PnewContent-input">
-                <span>내용</span>
+            <div class="AllNewContent-input">
+                <span class="Input-Title">내용</span>
                 <textarea th:field="*{content}" placeholder="내용을 입력해주세요" class="text-area"></textarea>
                 <span th:if="${#fields.hasErrors('content')}" th:errors="*{content}" class="errors"></span>
             </div>
 
-            <div class="PnewContent-button">
+            <div class="AllNewContent-button">
                 <button type="submit" class="button">저장</button>
             </div>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
         </form>
     </div>
 </div>
-
 </html>
