--- a/src/main/resources/templates/upBoard/newContent.html
+++ b/src/main/resources/templates/upBoard/newContent.html
@@ -8,24 +8,24 @@
 
 </head>
 
-<div layout:fragment="content" class="UBnewContent">
+<div layout:fragment="content" class="AllNewContent">
     <div>
-        <form role="form" method="post" th:object="${upBoardFormDto}" class="UBnewContent-form">
+        <form role="form" method="post" th:object="${upBoardFormDto}" class="AllNewContent-form">
             <!-- 제목 입력란 -->
-            <div class="UBnewContent-input">
-                <span>제목</span>
+            <div class="AllNewContent-input">
+                <span class="Input-Title">제목</span>
                 <input type="text" th:field="*{title}" placeholder="제목을 입력해주세요">
                 <span th:if="${#fields.hasErrors('title')}" th:errors="*{title}" class="errors"></span>
             </div>
 
             <!-- 내용 입력란 -->
-            <div class="UBnewContent-input">
-                <span>내용</span>
+            <div class="AllNewContent-input">
+                <span class="Input-Title">내용</span>
                 <textarea th:field="*{content}" placeholder="내용을 입력해주세요" class="text-area"></textarea>
                 <span th:if="${#fields.hasErrors('content')}" th:errors="*{content}" class="errors"></span>
             </div>
 
-            <div class="UBnewContent-button">
+            <div class="AllNewContent-button">
                 <button type="submit" class="custom-button">저장</button>
             </div>
             <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
