--- a/src/main/resources/templates/upBoard/upBoardList.html
+++ b/src/main/resources/templates/upBoard/upBoardList.html
@@ -51,7 +51,7 @@
     </script>
 </th:block>
 
-<div layout:fragment="content" class="upBoardList">
+<div layout:fragment="content" class="AllList">
     <div class="button-container">
         <button class="custom-button" onclick="newContent()">게시글 작성</button>
         <form role="form" method="post" class="custom-form">
@@ -61,7 +61,7 @@
     </div>
 
     <div>
-        <table class="upBoardList-table">
+        <table class="content-table">
             <thead>
             <tr>
                 <th>작성자</th>
