--- a/src/main/resources/templates/member/memberEditForm.html
+++ b/src/main/resources/templates/member/memberEditForm.html
@@ -3,6 +3,10 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout1}">
 
+<head>
+    <link rel="stylesheet" type="text/css" href="/css/allCss.css"/>
+</head>
+
 <!-- 사용자 CSS 추가 -->
 <th:block layout:fragment="css">
     <style>
@@ -26,22 +30,13 @@
 
 </th:block>
 
-<head>
-    <link rel="stylesheet" type="text/css" href="/css/allCss.css"/>
-</head>
-
 <div layout:fragment="content" class="AllNewContent">
+    <form role="form" method="post" th:object="${member}" class="AllNewContent-form">
 
-    <form action="/members/new" role="form" method="post"  th:object="${memberFormDto}" class="AllNewContent-form">
         <div class="AllNewContent-input">
             <span class="Input-Title">이름</span>
             <input type="text" th:field="*{name}" placeholder="이름을 입력해주세요">
             <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="fieldError">Incorrect data</span>
-        </div>
-        <div class="AllNewContent-input">
-            <span class="Input-Title">이메일 주소</span>
-            <input type="email" th:field="*{email}" placeholder="이메일을 입력해주세요">
-            <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}" class="fieldError">Incorrect data</p>
         </div>
         <div class="AllNewContent-input">
             <span class="Input-Title">비밀번호</span>
@@ -54,4 +49,5 @@
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
     </form>
 </div>
+
 </html>
