--- a/src/main/resources/templates/member/memberLoginForm.html
+++ b/src/main/resources/templates/member/memberLoginForm.html
@@ -3,6 +3,10 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout1}">
 
+<head>
+    <link rel="stylesheet" type="text/css" href="/css/allCss.css"/>
+</head>
+
 <!-- 사용자 CSS 추가 -->
 <th:block layout:fragment="css">
     <style>
@@ -11,22 +15,26 @@
         }
     </style>
 </th:block>
-<div layout:fragment="content">
+<div layout:fragment="content" class="AllNewContent">
 
-    <form role="form" method="post" action="/members/login">
-        <div class="form-group">
-            <label th:for="email">이메일주소</label>
-            <input type="email" name="email" class="form-control" placeholder="이메일을 입력해주세요">
+    <form role="form" method="post" action="/members/login" class="AllNewContent-form">
+        <div class="AllNewContent-input">
+            <span class="Input-Title">이메일 주소</span>
+            <input type="email" name="email" placeholder="이메일을 입력해주세요">
         </div>
-        <div class="form-group">
-            <label th:for="password">비밀번호</label>
-            <input type="password" name="password" id="password" class="form-control" placeholder="비밀번호 입력">
+        <div class="AllNewContent-input">
+            <span class="Input-Title">비밀번호</span>
+            <input type="password" name="password" id="password" placeholder="비밀번호 입력">
         </div>
-        <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
-        <button class="btn btn-primary">로그인</button>
-
-        <button type="button" class="btn btn-primary" onClick="location.href='/members/new'">회원가입</button>
-
+            <div class="flex-container">
+            <div class="AllNewContent-button">
+                <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
+                <button class="btn btn-primary">로그인</button>
+            </div>
+            <div class="AllNewContent-button">
+                <button type="button" class="btn btn-primary" onClick="location.href='/members/new'">회원가입</button>
+            </div>
+        </div>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
     </form>
 </div>
