--- a/src/main/resources/templates/layouts/layout1.html
+++ b/src/main/resources/templates/layouts/layout1.html
@@ -36,7 +36,7 @@
     <div layout:fragment="content" class="content">
         <!-- 내용을 추가하세요 -->
     </div>
-    <div th:replace="fragments/footer::footer"></div>
+<!--    <div th:replace="fragments/footer::footer"></div>-->
 </div>
 </body>
 </html>
